-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13
-
Component/s: client-libs
-
b15
There is a missmatch between the Java definition and the native JNI implementation for the "interlace" parameter of the awt_image_GifImageDecoder_parseImage() method:
src/java.desktop/share/classes/sun/awt/image/GifImageDecoder.java
private native boolean parseImage(
int x, int y,
int width, int height,
boolean interlace, <-------- the boolean type in java code
int initCodeSize,
byte block[], byte rasline[],
IndexColorModel model);
src/java.desktop/share/native/libawt/awt/image/gif/gifdecoder.c
JNIEXPORT jboolean JNICALL
Java_sun_awt_image_GifImageDecoder_parseImage(JNIEnv *env, jobject this,
jint relx, jint rely,
jint width, jint height,
jint interlace, <--- wrongly cast to the int type in the native code
jint initCodeSize,
jbyteArray blockh,
jbyteArray raslineh,
jobject cmh)
{
src/java.desktop/share/classes/sun/awt/image/GifImageDecoder.java
private native boolean parseImage(
int x, int y,
int width, int height,
boolean interlace, <-------- the boolean type in java code
int initCodeSize,
byte block[], byte rasline[],
IndexColorModel model);
src/java.desktop/share/native/libawt/awt/image/gif/gifdecoder.c
JNIEXPORT jboolean JNICALL
Java_sun_awt_image_GifImageDecoder_parseImage(JNIEnv *env, jobject this,
jint relx, jint rely,
jint width, jint height,
jint interlace, <--- wrongly cast to the int type in the native code
jint initCodeSize,
jbyteArray blockh,
jbyteArray raslineh,
jobject cmh)
{