8217735: awt_image_GifImageDecoder_parseImage() "interlace" param has the wrong type

Reviewed-by: psadhukhan, jdv